# bing-wallpaper-client

./: README.md  doc.md
.cursor/commands/: review.md
.cursor/plans/: 添加开机自启动功能_7b16c63c.plan.md  编写项目说明文档_9ac91541.plan.md
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
